# marsa

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: aspects.json  aspects.txt  aspects.yaml  aspects.yml  categories.json  categories.txt  categories.yml
marsa/: __init__.py
marsa/src/marsa/: __main__.py  config.py  export.py  matching.py  pipeline.py  sentiment.py  utils.py
scripts/: post_install.py
src/marsa/: __init__.py  __main__.py  config.py  export.py  matching.py  pipeline.py  sentiment.py  utils.py
tests/: constants.py  test_config.py  test_export.py  test_matching.py  test_sentiment.py  test_utils.py
tests/cli/: test_cli_analyze_file.py  test_cli_analyze_text.py  test_cli_integration.py
tests/data/: test_aspect.json  test_aspect.yaml  test_aspect_only.json  test_aspect_only.yaml
tests/fixtures/: config.json  config.yaml  constants.py  test_cli_config.yaml  test_config_no_categories.json  test_config_no_categories.yaml  test_config_no_phrases.json  test_config_no_phrases.yaml  test_config_only_aspects.json  test_config_only_aspects.yaml
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_export.py  test_matching.py  test_sentiment.py
