[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "marsa"
version = "0.1.0"
description = "MARSA (Multiple-Aspect Rule-Based Sentiment Annotator) is a lightweight assistant for aspect-sentiment pair extraction and correction."
authors = [
    { name = "Anjola Aina", email = "anjola.aina@gmail.com" }
]
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8,<3.13"
homepage = "https://github.com/anj0la/marsa"
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies for MARSA
dependencies = [
    "emoji>=1.2",
    "numpy>=1.19",
    "pandas>=1.1",
    "pip>=25.0.1",
    "pyyaml>=5.4",
    "scikit-learn>=0.24",
    "spacy>=3.0",
    "vadersentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",       
    "ruff>=0.1,<0.5",           
]
docs = [
    "sphinx>=5.0,<8.0",          
    "sphinx-rtd-theme>=1.0,<2.0",
]

[project.urls]
"Homepage" = "https://github.com/anj0la/marsa"
"Bug Tracker" = "https://github.com/anj0la/marsa/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]